article image: fixed title overlay on mobile

--- a/resources/scss/components/_articleBody.scss
+++ b/resources/scss/components/_articleBody.scss
@@ -16,7 +16,7 @@
         width: 100%;
         border-bottom: 5px solid #e7e7e7;
         @include ipadOrSmaller {
-            height: 200px;
+            height: 199px;
             border-bottom: 4px solid #e7e7e7;
         }
     }
